--- a/pages/popup.html
+++ b/pages/popup.html
@@ -29,6 +29,7 @@
     </form>
     <div>
       <button id="searchWorkflows">Search workflows</button>
+      <button id="showSubjects">Subjects</button>
       <script src="popup.js"></script>
     </div>
   </body>
