hide\show record info setting was added

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -15,11 +15,17 @@
       <div class="row">
         <div>
           <label>
+            <input id="showRecordInfo" name="showRecordInfo" type="checkbox">
+            Show record info
+          </label>
+        </div>
+        <div style="padding-left:25px">
+          <label>
             <input id="showOwner" name="showOwner" type="checkbox">
             Owner
           </label>
         </div>
-        <div>
+        <div style="padding-left:25px">
           <label>
             <input id="showOverridden" name="showOverridden" type="checkbox">
             Overridden created on
