--- a/pages/popup.html
+++ b/pages/popup.html
@@ -36,7 +36,10 @@
     <div>
       <button id="searchWorkflows">Search workflows</button>
       <button id="showSubjects">Subjects</button>
-      <script src="popup.js"></script>
     </div>
+    <div class="row" style="text-align: center;">
+      <a style="color:grey" id="submitIssue" href="https://github.com/mdeykun/mdCrmChromeExtension/issues">Submit bug or feature request</a>
+    </div>
+    <script src="popup.js"></script>
   </body>
 </html>
