Display search phrase in search result

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -34,7 +34,7 @@
       </div>
     </form>
     <div>
-      <button id="searchWorkflows">Search workflows</button>
+      <button id="searchWorkflows">Search workflows/flows</button>
       <button id="showSubjects">Subjects</button>
     </div>
     <div class="row" style="text-align: center;">
