--- a/pages/workflows.html
+++ b/pages/workflows.html
@@ -8,6 +8,12 @@
     </style>   
 </head>
 <body>
+
+    <div>
+        <h2>Search Phrase:</h2>
+        <p id="searchPhrase" style="font-size: 1.5em;"></p>
+    </div>
+
     <h2>Workflows</h2>
     <div>
         <table id="workflows">
